--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body{
         rgba(0, 0, 0, 0.7)
       ),url("background.jpg");
     background-attachment: fixed;
-    color:white;
+    color: #c4c4c4;
     background-size: 100% auto ;
 }
 .top{
@@ -40,8 +40,8 @@ header{
 }
 .title{
     font-size: 40px;
-    
-    color: rgb(31, 202, 165);
+    font-family: monospace;
+    color: #e65454;
     width: fit-content;
     padding-left: 20px;
     padding-right: 20px;
@@ -50,8 +50,13 @@ header{
 
 .subTitle{
     font-size: 35px;
-    color: rgb(241, 65, 65);
-    font-style: italic;
+    font-family: monospace;
+    color: #19d1c2;
+    background-color: rgba(30,30,30,0.75);
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    
 }
 .horizontal{
     float: left;
@@ -59,23 +64,27 @@ header{
 #stats{
     position: absolute;
     margin-left: 0px;
-    font-style: italic;
-    color: blue;
+    width: 225px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+    color: lightblue;
 }
-.member{
-    color: white;
-}
+
 .member:hover{
     background-color: rgb(184, 16, 31);
 }
 #team{
     width: fit-content;
-    
+    margin-right: 70px;
 }
 #practice{
-    margin-top: -100px;
+    margin-top: 70px;
     width: 60%;
-    padding-left: 150px;
+    
+
+}
+#teamList{
+    margin-top: 100px;
 }
 @font-face {
     font-family: "norwester";
@@ -105,8 +114,10 @@ header{
 }
 #googleSchedule{
     box-shadow: 0 0px 20px 0px black;
-    background-color: blueviolet;
-    padding: 20px;
+    background-color: rgb(184, 16, 31);
+    border-style: solid;
+    border-width: 2px;
+    padding: 15px;
     float: right;
 }
 #menu li {
@@ -114,6 +125,9 @@ header{
 }
 .selectedMenuItem{
     border-bottom: 1px solid rgb(184, 16, 31);
+}
+#signUp{
+    width: 60%;
 }
 .menuItem {
     display: block;
@@ -132,7 +146,7 @@ header{
     background-color: rgb(184, 16, 31);/* #111;*/
 }
 .textLink{
-    color: #ccd63d;
+    color: rgb(112, 112, 255);
 }
 .resource{
     opacity: 0.8;
@@ -165,19 +179,24 @@ header{
     float: right;
 }
 #collage{
-    padding-top: 100px;
+    padding-top: 70px;
     float: right;
     width: 10%;
 }
-
+#meets{
+    margin-top: 20px;
+    padding-bottom: -20px;
+}
 
 .backdropli li {
     background-color: rgba(30,30,30,0.75);
     padding: 5px;
     width: fit-content;
+    
 }
 .backdrop{
     background-color: rgba(30,30,30,0.75);
     padding: 5px;
     width: fit-content;
+    
 }
